--- a/humechanic/JoinStep.html
+++ b/humechanic/JoinStep.html
@@ -47,7 +47,7 @@
             </div>
           </div>
         </div>
-    <div class="Join">
+    <div class="JoinStep">
       <h1>동아리 가입절차</h1>
       <h3>
         <ol>
