--- a/humechanic/IntroduceClub.html
+++ b/humechanic/IntroduceClub.html
@@ -47,12 +47,12 @@
               <a href="ObjectCash.html">회비 내역</a>
             </div>
           </div>
-        </div>    
+        </div>
     <div class="IntroduceClub">
       <p>
         <div class="IntroduceClubTitle">
           <div>
-            <h1><img src="HULogo.jpg" width = "5%" height= "5%" alt="HMLogo" title="HMLogo" >동아리 소개</h1></div>
+            <h1><img src="HuLogo.jpg" width = "5%" height= "5%" alt="HMLogo" title="HMLogo" >동아리 소개</h1></div>
         </div>
         <h2>
           <ul>
