--- a/humechanic/IntroduceClub.html
+++ b/humechanic/IntroduceClub.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="home">
-      <div><h1><a href="Humechanic.html"><img src="HuLogo.jpg" alt="HuLogo" width="2%">umechanic</a></h1></div>
+      <div><h1><a href="Humechanic.html"><img src="HuLogo.jpg" alt="HuLogo" width="2.2%">umechanic</a></h1></div>
     </div>
         <div class="menu">
           <div class = "Introduce">
@@ -49,11 +49,7 @@
           </div>
         </div>
     <div class="IntroduceClub">
-      <p>
-        <div class="IntroduceClubTitle">
-          <div>
-            <h1><img src="HuLogo.jpg" width = "5%" height= "5%" alt="HMLogo" title="HMLogo" >동아리 소개</h1></div>
-        </div>
+      <h1>동아리 소개</h1></div>
         <h2>
           <ul>
            <li><strong>HuMechanic</strong>은 'Human'과 'Mechanic'이 합쳐진 단어입니다.</li>
@@ -66,8 +62,7 @@
            <br>
            <li>프로젝트와 스터디 그룹을 통해 학습한 내용과 아이디어로 공모전에 지원합니다.</li>
          </ul>
-         </h2>
-      </p>
+       </h2>
     </div>
 
   </body>
