--- a/humechanic/Humechanic.html
+++ b/humechanic/Humechanic.html
@@ -48,6 +48,7 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <form class="login">
       <p><label for="ID">ID : </label><input type="text" placeholder ="아이디" id="ID"></p>
       <p><label for="PW">PW : </label><input type="password" placeholder ="비밀번호" id="PW"></p>
@@ -56,5 +57,6 @@
     <div>
       <img src="huemember.jpg" width = "80%" height= "" alt="Member" title="Member" >
     </div>
+  </div>
   </body>
 </html>
