--- a/humechanic/IntroduceClub.html
+++ b/humechanic/IntroduceClub.html
@@ -48,6 +48,7 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <div class="IntroduceClub">
       <h1>동아리 소개</h1></div>
         <h2>
@@ -64,6 +65,6 @@
          </ul>
        </h2>
     </div>
-
+   </div>
   </body>
 </html>
