--- a/humechanic/IntroduceMember.html
+++ b/humechanic/IntroduceMember.html
@@ -47,6 +47,7 @@
             </div>
           </div>
         </div>
+<div class="content">
   <h1>회원소개</h1>
   <div class="Member">
     <h3>
@@ -63,6 +64,6 @@
       </p>
     </h3>
   </div>
-
+ </div>
   </body>
 </html>
