--- a/humechanic/JoinCondition.html
+++ b/humechanic/JoinCondition.html
@@ -47,6 +47,7 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <div class="Join">
       <p>
         <h1>동아리 가입조건</h1>
@@ -61,5 +62,6 @@
         </h3>
       </p>
     </div>
+  </div>
   </body>
 </html>
