--- a/humechanic/JoinStep.html
+++ b/humechanic/JoinStep.html
@@ -47,6 +47,7 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <div class="JoinStep">
       <h1>동아리 가입절차</h1>
       <h3>
@@ -58,5 +59,6 @@
         </ol>
     </h3>
     </div>
+  </div>
   </body>
 </html>
