--- a/humechanic/ObjectCash.html
+++ b/humechanic/ObjectCash.html
@@ -47,10 +47,12 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <div class="ObjectCash">
       <h1>회비 사용 내역</h1>
       <h3>회비 잔액 : 200,000원</h3>
    </div>
+  </div>
    </script>
   </body>
 </html>
