--- a/humechanic/ActivityCompetition.html
+++ b/humechanic/ActivityCompetition.html
@@ -47,10 +47,12 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <div class="Activities">
       <p>
         <h1>공모전</h1>
       </p>
     </div>
+  </div>
   </body>
 </html>
