--- a/humechanic/ActivityProject.html
+++ b/humechanic/ActivityProject.html
@@ -47,13 +47,13 @@
             </div>
           </div>
         </div>
-
+<div class="content">
     <div class="Activities">
       <h1>프로젝트</h1>
 
 
 
     </div>
-
+   </div>
   </body>
 </html>
