--- a/humechanic/ComunityNews.html
+++ b/humechanic/ComunityNews.html
@@ -47,11 +47,13 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <div class="Comunity">
       <p>
         <h1>공지사항</h1>
       </p>
     </div>
+  </div>
 
     <div id="disqus_thread"></div>
 <script>
@@ -73,6 +75,6 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
+</div>
   </body>
 </html>
