--- a/humechanic/ComunityQnA.html
+++ b/humechanic/ComunityQnA.html
@@ -47,7 +47,7 @@
             </div>
           </div>
         </div>
-
+<div class="content">
     <div class="Comunity">
       <p>
         <h1>Q & A</h1>
@@ -75,6 +75,6 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-
+</div>
   </body>
 </html>
