--- a/humechanic/ObjectList.html
+++ b/humechanic/ObjectList.html
@@ -47,6 +47,7 @@
             </div>
           </div>
         </div>
+  <div class="content">
     <div class="ObjectList">
       <h1>물품 현황</h1>
       <h3>
@@ -59,5 +60,6 @@
         </ol>
       </h3>
    </div>
+  </div>
   </body>
 </html>
