--- a/humechanic/Humechanic.html
+++ b/humechanic/Humechanic.html
@@ -52,7 +52,8 @@
     <form class="login">
       <p><label for="ID">ID : </label><input type="text" placeholder ="아이디" id="ID"></p>
       <p><label for="PW">PW : </label><input type="password" placeholder ="비밀번호" id="PW"></p>
-      <p><input type="submit" value="로그인" id="loginbtn" onclick="login()"></p>
+      <p><input type="submit" value="로그인" id="loginbtn" onclick="login()">
+        <input type="submit" value="회원가입" id="signupbtn" onclick="signup()"></p>
     </form>
     <div>
       <img src="huemember.jpg" width = "80%" height= "" alt="Member" title="Member" >
