--- a/humechanic/ActivityCompetition.html
+++ b/humechanic/ActivityCompetition.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Humechanic</title>
     <link rel="stylesheet" href="HuMain.css">
+    <link rel="stylesheet" href="Activities.css">
   </head>
   <body>
     <div class="home">
@@ -48,10 +49,12 @@
           </div>
         </div>
   <div class="content">
-    <div class="Activities">
-      <p>
-        <h1>공모전</h1>
-      </p>
+    <div class="Activity">
+      <div class="ActivityTitle">공모전</div>
+      <h1>지역문제 해결 18.11.09~12.27</h1>
+      <h2>주제 : 지하철 임산부 배려석</h2>
+      <h3>팀명 : 세움청(세상을 움직이는 청년들)</h3>
+      <h3>팀원 : 이제홍, 윤동환, 허다빈, 홍성연</h3>
     </div>
   </div>
   </body>
