--- a/humechanic/ActivityProject.html
+++ b/humechanic/ActivityProject.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Humechanic</title>
     <link rel="stylesheet" href="HuMain.css">
+    <link rel="stylesheet" href="Activities.css">
   </head>
   <body>
     <div class="home">
@@ -48,11 +49,14 @@
           </div>
         </div>
 <div class="content">
-    <div class="Activities">
-      <h1>프로젝트</h1>
-
-
-
+  <div class="Activity">
+    <div class="ActivityTitle">프로젝트</div>
+      <div class="Coin">
+        <h1>동전 분류기 18.10.02~11.01</h1>
+        <h2>주제 : 동전 분류기 제작</h2>
+        <h3>팀명 : 동환Team</h3>
+        <h3>팀원 : 윤동환, 한용상, 조민경</h3>
+      </div>
     </div>
    </div>
   </body>
