--- a/humechanic/ActivityStudy.html
+++ b/humechanic/ActivityStudy.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Humechanic</title>
     <link rel="stylesheet" href="HuMain.css">
+    <link rel="stylesheet" href="Activities.css">
   </head>
   <body>
     <div class="home">
@@ -48,10 +49,15 @@
           </div>
         </div>
 <div class="content">
-  <div class="Activities">
-      <p>
-        <h1>스터디 그룹</h1>
-      </p>
+  <div class="ActivityTitle">스터디 그룹</div>
+    <div class="Activity">
+      <div class="NuBaNamDa">
+        <h1>드림위드 19.06.27~09.01</h1>
+        <h2>주제 : 웹 제작 및 앱 제작</h2>
+        <h3>팀명 : 누빠남다</h3>
+        <h3>팀원 : 한용상, 윤동환, 조민경, 김다은</h3>
+      </div>
+      <img src="nubanamda.jpg" width="20%" alt="">
     </div>
   </div>
   </body>
