--- a/humechanic/JoinCondition.html
+++ b/humechanic/JoinCondition.html
@@ -48,16 +48,21 @@
           </div>
         </div>
   <div class="content">
-    <div class="Join">
+    <div class="JoinCondition">
       <p>
         <h1>동아리 가입조건</h1>
         <h3>
           <ol>
             <li>인성이 올바른 사람</li>
+            <br>
             <li>공동체 생활을 잘하는 사람</li>
+            <br>
             <li>2학년 이상인 사람</li>
+            <br>
             <li>목표하는 분야가 명확</li>
+            <br>
             <li>직전학기 학점 4.0이상</li>
+            <br>
           <ol>
         </h3>
       </p>
