--- a/humechanic/ActivityCompetition.html
+++ b/humechanic/ActivityCompetition.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Humechanic</title>
     <link rel="stylesheet" href="HuMain.css">
     <link rel="stylesheet" href="Activities.css">
@@ -49,13 +49,29 @@
           </div>
         </div>
   <div class="content">
-    <div class="Activity">
-      <div class="ActivityTitle">공모전</div>
-      <h1>지역문제 해결 18.11.09~12.27</h1>
-      <h2>주제 : 지하철 임산부 배려석</h2>
-      <h3>팀명 : 세움청(세상을 움직이는 청년들)</h3>
-      <h3>팀원 : 이제홍, 윤동환, 허다빈, 홍성연</h3>
+    <div class="ActivityTitle">공모전</div>
+    <div class="competition">
+      <div class="Activity">
+        <img src="seumchung.jpg" alt="세움청">
+        <div class="team">
+          <h1>지역문제 해결 18.11.09~12.27</h1>
+          <h2>주제 : 지하철 임산부 배려석</h2>
+          <h3>팀명 : 세움청(세상을 움직이는 청년들)</h3>
+          <h3>팀원 : 이제홍, 윤동환, 허다빈, 홍성연</h3>
+          <p><a href="seumchung.html">상세내용</a></p>
+        </div>
+      </div>
+      <div class="Activity">
+        <img src="daejunalim.jpg" alt="누빠남다" >
+        <div class="team">
+          <h1>지역문제 해결 19.05.01~05.14</h1>
+          <h2>주제 : 대전 소식 알림이</h2>
+          <h3>팀명 : 누빠남다</h3>
+          <h3>팀원 : 한용상, 윤동환, 조민경, 김다은</h3>
+          <p><a href="daejunalim.html">상세내용</a></p>
+      </div>
+      </div>
     </div>
   </div>
-  </body>
+</body>
 </html>
