--- a/humechanic/ActivityProject.html
+++ b/humechanic/ActivityProject.html
@@ -51,13 +51,15 @@
 <div class="content">
   <div class="Activity">
     <div class="ActivityTitle">프로젝트</div>
-      <div class="Coin">
-        <h1>동전 분류기 18.10.02~11.01</h1>
-        <h2>주제 : 동전 분류기 제작</h2>
-        <h3>팀명 : 동환Team</h3>
-        <h3>팀원 : 윤동환, 한용상, 조민경</h3>
-      </div>
+    <img src="coin.jpg" alt="coin">
+    <div class="team">
+      <h1>동전 분류기 18.10.02~11.01</h1>
+      <h2>주제 : 동전 분류기 제작</h2>
+      <h3>팀명 : 동환Team</h3>
+      <h3>팀원 : 윤동환, 한용상, 조민경</h3>
+      <p><a href="coin.html">상세내용</a></p>
     </div>
-   </div>
+    </div>
+    </div>
   </body>
 </html>
