--- a/humechanic/ActivityStudy.html
+++ b/humechanic/ActivityStudy.html
@@ -51,13 +51,14 @@
 <div class="content">
   <div class="ActivityTitle">스터디 그룹</div>
     <div class="Activity">
-      <div class="NuBaNamDa">
+      <img src="nubanamda.jpg"  alt="NuBaNamDa">
+      <div class="team">
         <h1>드림위드 19.06.27~09.01</h1>
         <h2>주제 : 웹 제작 및 앱 제작</h2>
         <h3>팀명 : 누빠남다</h3>
         <h3>팀원 : 한용상, 윤동환, 조민경, 김다은</h3>
+        <p><a href="NuBaNamDa.html">상세내용</a></p>
       </div>
-      <img src="nubanamda.jpg" width="20%" alt="">
     </div>
   </div>
   </body>
