--- a/humechanic/Humechanic.html
+++ b/humechanic/Humechanic.html
@@ -49,7 +49,7 @@
           </div>
         </div>
     <img src="huemember.jpg" width = "80%" height= "" alt="Member" title="Member" >
-    <form class="login">
+    <form class="login" method="post">
       <p><label for="ID">ID : </label><input type="text" placeholder ="아이디" id="ID"></p>
       <p><label for="PW">PW : </label><input type="password" placeholder ="비밀번호" id="PW"></p>
       <p><input type="submit" value="로그인" id="loginbtn" onclick="alert('로그인')">
