--- a/humechanic/ActivityProject.html
+++ b/humechanic/ActivityProject.html
@@ -5,6 +5,7 @@
     <title>Humechanic</title>
     <link rel="stylesheet" href="HuMain.css">
     <link rel="stylesheet" href="Activities.css">
+    <link rel="stylesheet" href="Activities.css">
   </head>
   <body>
     <div class="home">
@@ -57,7 +58,7 @@
       <h2>주제 : 동전 분류기 제작</h2>
       <h3>팀명 : 동환Team</h3>
       <h3>팀원 : 윤동환, 한용상, 조민경</h3>
-      <p><a href="coin.html">상세내용</a></p>
+      <p><a href="Coin.html">활동내용</a></p>
     </div>
     </div>
     </div>
