--- a/humechanic/NuBaNamDa.html
+++ b/humechanic/NuBaNamDa.html
@@ -5,7 +5,6 @@
     <title>Humechanic</title>
     <link rel="stylesheet" href="HuMain.css">
     <link rel="stylesheet" href="ActivityWrite.css">
-    <link rel="stylesheet" href="Activities.css">
   </head>
   <body>
     <div class="home">
@@ -50,17 +49,14 @@
           </div>
         </div>
 <div class="content">
-  <div class="ActivityTitle">스터디 그룹</div>
-    <div class="Activity">
-      <img src="nubanamda.jpg"  alt="NuBaNamDa">
-      <div class="team">
-        <h1>드림위드 19.06.27~09.01</h1>
-        <h2>주제 : 웹 제작 및 앱 제작</h2>
-        <h3>팀명 : 누빠남다</h3>
-        <h3>팀원 : 한용상, 윤동환, 조민경, 김다은</h3>
-        <p><a href="NuBaNamDa.html">활동내용</a></p>
-      </div>
-    </div>
+  <div class="RecordTitle">
+  <a class="RecordButton"href="ActivityRecord.html">글쓰기</a>
+  </div>
+  <div class="Record">
+    <img src="dream1.jpg" alt="library" width="100%">
+    <h2>활동 주제 : 코엑스 별빛 도서관 방분 및 책 읽기(19.07.13)</h2>
+
+  </div>
   </div>
   </body>
 </html>
