--- a/humechanic/ActivityCompetition.html
+++ b/humechanic/ActivityCompetition.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Humechanic</title>
     <link rel="stylesheet" href="HuMain.css">
+    <link rel="stylesheet" href="ActivityWrite.css">
     <link rel="stylesheet" href="Activities.css">
   </head>
   <body>
@@ -58,7 +59,7 @@
           <h2>주제 : 지하철 임산부 배려석</h2>
           <h3>팀명 : 세움청(세상을 움직이는 청년들)</h3>
           <h3>팀원 : 이제홍, 윤동환, 허다빈, 홍성연</h3>
-          <p><a href="seumchung.html">상세내용</a></p>
+          <p><a href="Seumchung.html">활동내용</a></p>
         </div>
       </div>
       <div class="Activity">
@@ -68,7 +69,7 @@
           <h2>주제 : 대전 소식 알림이</h2>
           <h3>팀명 : 누빠남다</h3>
           <h3>팀원 : 한용상, 윤동환, 조민경, 김다은</h3>
-          <p><a href="daejunalim.html">상세내용</a></p>
+          <p><a href="DaejunAlim.html">활동내용</a></p>
       </div>
       </div>
     </div>
