--- a/humechanic/ActivityRecord.html
+++ b/humechanic/ActivityRecord.html
@@ -5,10 +5,11 @@
   <link rel="stylesheet" href=".css">
 </head>
 <body>
+  <h1>이번 활동에서 무엇을 하였나요??</h1>
   <form action="localhost.php">
     <textarea cols="50" rows="20" placeholder="활동내용을 적으세요."></textarea>
     <p>
-    <input type="file" name="이미지 삽입" value="이미지" >
+    <input type="file" name="이미지 삽입" value="이미지" title="dd">
     <input type="submit"  value="저장">
     </p>
   </form>
